# discrod-to-llm

./: .gitignore  CLAUDE.md  HTML-TO-PDF.md  README.md  channels.example.yaml  pyproject.toml  run
docs/: discord-exporter.md
pdf-export/: html-to-pdf.mjs  package-lock.json
src/discord_export/: convert.py  permalink.py
